Clases, modulo cancion, modulo album.

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Biblioteca de musica</h1>
 
-Welcome to your new app.
+Bienvenido, puedes navegar por el panel lateral.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
