--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -8,18 +8,18 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="Artistas">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Artistas
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="Canciones" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Canciones
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="Album">
+                <span class="oi oi-plus" aria-hidden="true"></span> Album
             </NavLink>
         </li>
     </ul>
