Filtrar albumes por artista.

--- a/Pages/Artistas.razor
+++ b/Pages/Artistas.razor
@@ -3,7 +3,7 @@
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
 @inject NavigationManager NavigationManager
 
-<h3>Artistas</h3>
+<h3>Agregar Artistas</h3>
 
 <EditForm Model="@artista">
     <div class="form-group">
