--- a/Pages/Canciones.razor
+++ b/Pages/Canciones.razor
@@ -3,7 +3,7 @@
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
 @inject NavigationManager NavigationManager
 
-<h3>Canciones</h3>
+<h3>Agregar Canciones</h3>
 
 <EditForm Model="@cancion">
     <div class="form-group">
