--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -8,6 +8,11 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Inicio
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="Artistas">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Artistas
             </NavLink>
